--- a/golang/Пакеты.md
+++ b/golang/Пакеты.md
@@ -35,6 +35,7 @@ https://github.com/charmbracelet/huh
 https://github.com/spf13/cobra
 https://github.com/jroimartin/gocui
 https://github.com/rivo/tview
+https://github.com/charmbracelet/glamour
 
 ### GUI
 ▪️ https://github.com/maxence-charriere/go-app
@@ -106,7 +107,7 @@ https://github.com/tidwall/gjson
 https://github.com/json-iterator/go
 https://github.com/go-yaml/yaml
 
-### Миктосорвисы
+### Микросервисы
 https://github.com/go-kratos/kratos - это фреймворк Go, который предлагает удобные возможности, позволяющие быстро построить микросервисное приложение с нуля.
 https://github.com/go-micro/go-micro - мелкосервисы
 https://github.com/k3s-io/k3s - облегчённый кубер
@@ -121,6 +122,7 @@ https://github.com/redis/go-redis - поддержка redis
 https://github.com/go-gorm/gorm - orm
 https://github.com/jmoiron/sqlx
 https://github.com/polarsignals/frostdb - колоночная БД
+https://github.com/DiceDB/dice
 
 
 ### Безопасность
