--- a/golang/Пакеты.md
+++ b/golang/Пакеты.md
@@ -143,6 +143,7 @@ https://github.com/zyedidia/generic - дженерики
 https://github.com/Workiva/go-datastructures - разные структуры
 https://github.com/go-task/task - Task is a task runner / build tool that aims to be simpler and easier to use than, for example, GNU Make
 https://github.com/pdfcpu/pdfcpu - работа с pdf
+https://github.com/johnfercher/maroto - работа с pdf
 https://github.com/panjf2000/ants - пул горутин
 
 ## Боты
