add execution polisi example

--- a/cpp/conc/lesson.org
+++ b/cpp/conc/lesson.org
@@ -17,18 +17,17 @@
 
 Есть 4 варианта:
  + =seq= - std::execution::sequenced_policy - это default поведение. Алгоритм не должен быть параллелизован или векторизован библиотекой.
- + =par= - std::execution::parallel_policy - эта политика объявляет, что вызов алгоритма безопасен от race condition и deadlock (или как мне приколько перевёл яндекс гпт =расовых условий и мёртвых замков=). Поэтому библиотека может параллелизовать алгоритм (но не может векторизовать).
+ + =par= - std::execution::parallel_policy - эта политика объявляет, что вызов алгоритма безопасен от race condition и deadlock (или как мне прикольно перевёл яндекс гпт =расовых условий и мёртвых замков=). Поэтому библиотека может параллелизовать алгоритм (но не может векторизовать).
  + =par_unseq= - std::execution::parallel_unsequenced_policy - эта политика объявляет, что вызов алгоритма можно векторизовать. Это значит, что тело функции можно запускать для нескольких значений одновременно в том же потоке.
  + =unseq= - std::execution::unsequenced_policy - эта политика объединяет гарантии политик =par= и =unseq= и должна обеспечивать наивысший уровень оптимизации.
-*НО* указание параллельной политики не гарантирует параллельное выполнение, так как решение зависит от реализации и runtime-среды.
 
-** Пример 1
+Так вот оно указывается:
 #+begin_src cpp
 std::for_each(std::execution::par, std::begin(container), std::end(container), [](){...});
 #+end_src
 
-** Пример 2
- TODO: вставить пример отсюда https://en.cppreference.com/w/cpp/algorithm/execution_policy_tag
+*НО* указание параллельной политики НЕ гарантирует параллельное выполнение, так как решение зависит от реализации и runtime-среды.
+[[./exec_pol/main.cpp][жми сюда]]
 
 * Потоки
 ** std::tread
