add thread info

--- a/cpp/conc/lesson.org
+++ b/cpp/conc/lesson.org
@@ -31,9 +31,35 @@ std::for_each(std::execution::par, std::begin(container), std::end(container), [
 
 * Потоки
 ** std::tread
-** threads managing
+Основной класс для создания новых потоков в C++ – это =std::thread=.
++ Объект класса представляет собой один поток выполнения.
++ Новый поток начинает выполнение сразу же после построения объекта =std::thread=.
++ Возвращаемое значение функции потока, а если в ней будет брошено исключение, которое не будет обработано в этом же потоке, то вызовется =std::terminate=.
++ Передать возвращаемое значение или исключение из нового потока наружу можно через =std::promise= или через глобальные переменные.
++ Объекты =std::thread= также могут быть не связаны ни с каким потоком (после =default construction=, =move from=, =detach= или =join=), и поток выполнения может быть не связан ни с каким объектом =std::thread= (после =detach=).
++ Никакие два объекта =std::thread= не могут представлять один и тот же поток выполнения; =std::thread= нельзя копировать, но можно перемещать.
 
-* Атомики
+ #+begin_src cpp
+void do_some_work();
+std::thread my_thread(do_some_work);
+ #+end_src
+
+После запуска потока, нужно принять однозначное решение, ждать ли его завершения (=join=) или пустить его в фоне (=detach=).
+Дождаться завершения потока можно, вызвав =join()= для связанного экземпляра =std::thread=. Вызов =join()= приводит к очистке объекта =std::thread=, поэтому объект =std::thread= больше не связан с завершенным потоком.
+Вызов метода =detach()= для объекта =std::thread= позволяет потоку выполняться в фоновом режиме, непосредственное взаимодействие с ним не требуется. Возможность дождаться завершения этого потока исчезает: если поток отсоединяется, получить ссылающийся на него объект =std::thread= невозможно, поэтому такой поток больше нельзя присоединить.
+
+В С++20 появился новый класс для создания потоков и управления ими =std::jthread=.
+Он имеет то же поведение, что и =std::thread=, за исключением того, что =jthread= автоматически join'ится при уничтожении и предлагает интерфейс для остановки потока.
+В отличие от =std::thread=, =jthread= содержит внутренний закрытый член типа =std::stop_source=, который хранит =stop-state=. Конструктор =jthread= принимает функцию, которая принимает =std::stop_token= в качестве своего первого аргумента. Этот аргумент передаётся в функцию из =stop_source=, и позволяет функции проверить, была ли запрошена остановка во время ее выполнения, и завершиться при необходимости.
+
+** threads managing
+Стандартная библиотека предоставляет несколько методов для управления текущим потоком. Все они находятся в пространстве имён =std::this_thread=:
++ =std::this_thread::yield()= подсказывает планировщику потоков перепланировать выполнение, приостановив текущий поток и отдав преимущество другим потокам. Точное поведение этой функции зависит от реализации, в частности от механики используемого планировщика ОС и состояния системы.
++ =std::this_thread::get_id()= возвращает id потока..
++ =std::this_thread::sleep_for(sleep_duration)= блокирует выполнение текущего потока на время =sleep_duration=.
++ =std::this_thread::sleep_until(sleep_time)= блокирует выполнение текущего потока до наступления момента времени =sleep_time=.
+
+* Атомарные операции
 ** std::atomic
 ** atomic operations
 
