add info about atomics

--- a/cpp/conc/lesson.org
+++ b/cpp/conc/lesson.org
@@ -48,6 +48,7 @@ std::thread my_thread(do_some_work);
 Дождаться завершения потока можно, вызвав =join()= для связанного экземпляра =std::thread=. Вызов =join()= приводит к очистке объекта =std::thread=, поэтому объект =std::thread= больше не связан с завершенным потоком.
 Вызов метода =detach()= для объекта =std::thread= позволяет потоку выполняться в фоновом режиме, непосредственное взаимодействие с ним не требуется. Возможность дождаться завершения этого потока исчезает: если поток отсоединяется, получить ссылающийся на него объект =std::thread= невозможно, поэтому такой поток больше нельзя присоединить.
 
+** std::jthread
 В С++20 появился новый класс для создания потоков и управления ими =std::jthread=.
 Он имеет то же поведение, что и =std::thread=, за исключением того, что =jthread= автоматически join'ится при уничтожении и предлагает интерфейс для остановки потока.
 В отличие от =std::thread=, =jthread= содержит внутренний закрытый член типа =std::stop_source=, который хранит =stop-state=. Конструктор =jthread= принимает функцию, которая принимает =std::stop_token= в качестве своего первого аргумента. Этот аргумент передаётся в функцию из =stop_source=, и позволяет функции проверить, была ли запрошена остановка во время ее выполнения, и завершиться при необходимости.
@@ -58,9 +59,24 @@ std::thread my_thread(do_some_work);
 + =std::this_thread::get_id()= возвращает id потока..
 + =std::this_thread::sleep_for(sleep_duration)= блокирует выполнение текущего потока на время =sleep_duration=.
 + =std::this_thread::sleep_until(sleep_time)= блокирует выполнение текущего потока до наступления момента времени =sleep_time=.
+** std::async
+=std::async= — это высокоуровневый способ запуска асинхронных задач. Он возвращает объект =std::future=, который можно использовать для получения результата задачи.
+В конструктор класса передаются следующие аргументы:
++ Политика запуска. Определяет, как задача будет выполняться:
+  - =std::launch::async= — гарантирует, что задача будет выполнена асинхронно в отдельном потоке;
+  - =std::launch::deferred= — задача будет выполнена «лениво» (когда будет запрошен результат).
++ Вызываемая функция.
++ Передаваемые в функцию аргументы.
+
+Стандарт гарантирует, что окончание выполнения потока, запущенного вызовом =std::async=, синхронизировано с вызовом получения результата объектом =std::future= или освобождением общего состояния — области памяти, ответственной за передачу результата.
+Класс =std::future= представляет собой обертку, над каким-либо значением или объектом, вычисление или получение которого происходит отложено. Точнее, =future= предоставляет доступ к некоторому разделяемому состоянию, которое состоит из 2-х частей: данные(здесь лежит значение) и флаг готовности.
 
 * Атомарные операции
 ** std::atomic
+Атомарный объект – это такой объект операции над которым можно считать неделимыми, т.е. такими, которые не могут быть прерваны или результат которых не может быть получен, до окончания операции. В C++ в шаблонный класс =std::atomic<>= можно обертывать и многие другие типы, что способствует атомарным операциям над соответствующим типом.
+В С++20 появился класс =std::atomic_ref=, которые позволяет выполнять отомарные операции над значением по ссылке.
+[[./atomic/main.cpp][Пример]]
+
 ** atomic operations
 
 * Синхронизация выполнения
@@ -70,4 +86,8 @@ std::thread my_thread(do_some_work);
 ** futures
 ** каналы
 * Частые ошибки
+** Взаимоблокировки (мертвые замки)
+** Гонки данных (рассовые условия)
+
+
 * Векторизация
