add errors descripsions

--- a/cpp/conc/lesson.org
+++ b/cpp/conc/lesson.org
@@ -59,6 +59,7 @@ std::thread my_thread(do_some_work);
 + =std::this_thread::get_id()= возвращает id потока..
 + =std::this_thread::sleep_for(sleep_duration)= блокирует выполнение текущего потока на время =sleep_duration=.
 + =std::this_thread::sleep_until(sleep_time)= блокирует выполнение текущего потока до наступления момента времени =sleep_time=.
+
 ** std::async
 =std::async= — это высокоуровневый способ запуска асинхронных задач. Он возвращает объект =std::future=, который можно использовать для получения результата задачи.
 В конструктор класса передаются следующие аргументы:
@@ -70,6 +71,7 @@ std::thread my_thread(do_some_work);
 
 Стандарт гарантирует, что окончание выполнения потока, запущенного вызовом =std::async=, синхронизировано с вызовом получения результата объектом =std::future= или освобождением общего состояния — области памяти, ответственной за передачу результата.
 Класс =std::future= представляет собой обертку, над каким-либо значением или объектом, вычисление или получение которого происходит отложено. Точнее, =future= предоставляет доступ к некоторому разделяемому состоянию, которое состоит из 2-х частей: данные(здесь лежит значение) и флаг готовности.
+
 
 * Атомарные операции
 ** std::atomic
@@ -85,9 +87,16 @@ std::thread my_thread(do_some_work);
 ** semaphores
 ** futures
 ** каналы
-* Частые ошибки
+
+* Ошибки при работе с многопоточностью
 ** Взаимоблокировки (мертвые замки)
+Ситуация, когда два потока блокируют друг друга, ожидая освобождения ресурсов, что приводит к «заморозке» программы.
+
 ** Гонки данных (рассовые условия)
+Возникает, когда два или более потока пытаются одновременно изменить общие данные, что может привести к непредсказуемым результатам.
 
+** Тупик
+Возникает, когда два или более потока пытаются завладеть двумя или более ресурсами, проявляющаяся бесконечным взаимным ожиданием.
 
-* Векторизация
+** Ожидание на блокировках (Thread starvation)
+Основное время потока проводится не в исполнении полезной работы, а в ожидании блокированного другим потоком ресурса.
