add chanel info

--- a/cpp/conc/lesson.org
+++ b/cpp/conc/lesson.org
@@ -136,8 +136,10 @@ future.get();
     }
 #+end_src
 
-
 ** каналы
+Каналы (channels, pipes) – это удобная абстракция для построения приложений, работающих в многопоточной среде. Они используются для передачи сообщений между потоками и, одновременно с этим, как средство синхронизации потоков.
+В стандарте такого нет, но есть в =boost::fibers=. Как и всё связанное с =boost= это выглядит страшно.
+Есть в других языках - в =go= (chan) и =rust= (Sender и Receiver).
 
 * Ошибки при работе с многопоточностью
 ** Взаимоблокировки (мертвые замки)
