add atomics operations

--- a/cpp/conc/lesson.org
+++ b/cpp/conc/lesson.org
@@ -85,6 +85,33 @@ future.get();
 [[./atomic/main.cpp][Пример]]
 
 ** atomic operations
++ =load()= - просто возвращает значение
++ =store()= - нужна для присваивания значения
++ =is_lock_free()= - это рантайм-функция, возвращающая =true=, если тип свободен от блокировок, или же =false=, если для обеспечения атомарности используется мьютекс
++ =exchange= - присвоит значение и вернёт предыдущее
+   #+begin_src cpp
+    bool previousValue = atomicBool.exchange(false);
+   #+end_src
++ =compare_exchange_strong(T&  expected, const T& desired)= - сравнивает значение переменной с =expected=. Если значения совпадают, то записывает значение =desired= и возвращает =true=, иначе изменяет значение =expected= на текущее значение и возвращает =false=.
+
+Еще есть =std::memory_order=.
+Компилятор и CPU могут переупорядочивать операции чтения/записи, то есть могут быть фактически выполнены в порядке, отличном от того, который определен в коде.
+Это =enum=, определяющий, какие типы переупорядочиваний запрещены:
++ =memory_order_acquire= -  гарантирует, что ни одна операция чтения не будет перемещена до текущей операции чтения.
++ =memory_order_release= - гарантирует, что ни одна операция записи не будет перемещена после текущей операции.
++ =memory_order_acq_rel= - комбинация двух предыдущих гарантий.
++ =memory_order_relaxed= - вообще не дает никаких гарантий по переупорядочиванию, при этом самый эффективный с точки зрения производительности работы с атомиками.
++ =memory_order_seq_cst= - cамый строгий =memory ording=, дефолтный для операций чтения/записи, запрещающий любые переупорядочивания.
+
+По умолчанию для =store= и =load= используется самый строгий и в тоже время самый неэффективный =memory_order_seq_cst=, но при этом мы избавлены от различных постэффектов, связанных с переупорядочиванием, которые нужно иметь в виду.
+** зачем атомики, если есть мьютексы
+В большинстве случаев, конечно, атомики работают быстрее.
+Тем не менее производительность, как при использовании атомиков, так и при использовании мьютексов зависит от ряда факторов:
++ Реализации компилятора. Конечно же много зависит от того, как реализованы мьютекс и атомики в конкретном компиляторе. Не секрет, к примеру, что в современных компиляторах мьютексы, прежде чем перейти в режим ядра и усыпить тред используют активное ожидание (=lock-free=) с помощью атомика.
++ Операционной системы. Куда же без операционной системы, ведь в конечном счете используются примитивы синхронизации, предоставляемые ОС.
++ Архитектуры железа. Железо может быть разное, как и набор поддерживаемых инструкций. Атомики в конечном счете используют процессорные инструкции, поэтому наличие или отсутствие тех или иных инструкций может стать решающим фактором.
++ Количества CPU и ядер. C ростом количества процессорных единиц, как правило, профит от использования атомиков по сравнению с мьютексами увеличивается.
++ Алгоритма программы. Очевидный и последний в списке, при этом важнейший пункт. Прежде чем выбирать между различными механизмами защиты от =race condition=, стоит подумать о том, можно ли реализовать алгоритм программы таким образом, чтобы гонок не было в принципе.
 
 * Синхронизация выполнения
 ** mutual exclusion
