add info about mutex and conditional variable

--- a/cpp/conc/lesson.org
+++ b/cpp/conc/lesson.org
@@ -114,8 +114,39 @@ future.get();
 + Алгоритма программы. Очевидный и последний в списке, при этом важнейший пункт. Прежде чем выбирать между различными механизмами защиты от =race condition=, стоит подумать о том, можно ли реализовать алгоритм программы таким образом, чтобы гонок не было в принципе.
 
 * Синхронизация выполнения
-** mutual exclusion
+** mutual exclusion (std::mutex)
+Мьютекс — базовый элемент синхронизации представлен в 4 формах:
++ =mutex= - обеспечивает базовые функции =lock()= и =unlock()= и не блокируемый метод =try_lock()=
++ =recursive_mutex= -  может войти «сам в себя»
++ =timed_mutex= - в отличие от обычного мьютекса, имеет еще два метода: =try_lock_for()= и =try_lock_until()= - позволют потокам ждать определённый период времени, чтобы получить блокировку, прежде чем отказаться от попытки.
++ =recursive_timed_mutex= - это комбинация =timed_mutex= и =recursive_mutex=
++ =shared_mutex= - в отличие от других типов мьютексов, которые обеспечивают исключительный доступ, =shared_mutex= имеет два уровня доступа: =общий= — несколько потоков могут совместно использовать один и тот же мьютекс; =эксклюзивный= - только один поток может владеть мьютексом,
++ =shared_timed_mutex= - как =shared_mutex=, но с таймером.
+
+Классы «обертки» позволяют непротиворечиво использовать мьютекс в =RAII=-стиле с автоматической блокировкой и разблокировкой в рамках одного блока. Эти классы:
++ =lock_guard= - когда объект создан, он пытается получить мьютекс (вызывая =lock()=), а когда объект уничтожен, он автоматически освобождает мьютекс (вызывая =unlock()=)
++ =unique_lock= - в отличие от =lock_guard=, также поддерживает отложенную блокировку, временную блокировку, рекурсивную блокировку и использование условных переменных,
++ =scoped_lock= - это улучшенная версия =lock_guard=, которая одновременно блокирует произвольное количество мьютексов,
++ =shared_lock= - это тип блокировки, который обеспечивает совместное владение мьютексом =std::shared_mutex=. В отличие от =std::unique_lock=, несколько потоков могут удерживать =std::shared_lock= на одном и том же мьютексе одновременно.
+
+Конструкторы классов «оберток» могут принимать параметр, определяющий политику блокировки:
++ =defer_lock= - это аргумент, который позволяет отложить блокирование =mutex= при создании объекта. Он передаётся конструктору =std::unique_lock= и указывает, что объект не владеет правами на =mutex= и вызывать =unlock= в деструкторе не надо. Права на =mutex= можно получить позже, вызвав метод =lock= для объекта,
++ =try_to_lock= -это стратегия блокировки, которая пытается получить мьютекс без блокировки,
++ =adopt_lock= - предполагается, что у вызывающего потока уже есть мьютекс.
+
 ** condition variables
+Позволяют блокировать один или более потоков, пока либо не будет получено уведомление от другого потока, либо не произойдет некое событие.
+Есть две реализации условных переменны:
++ =condition_variable= - требует от любого потока перед ожиданием сначала выполнить =std::unique_lock=,
++ =condition_variable_any= - более общая реализация, которая работает с любым типом, который можно заблокировать.
+
+Как работают условные переменные:
++ Должен быть хотя бы один поток, ожидающий, пока какое-то условие станет истинным. Ожидающий поток должен сначала выполнить =unique_lock=. Эта блокировка передается методу =wait()=, который освобождает мьютекс и приостанавливает поток, пока не будет получен сигнал от условной переменной. Когда это произойдет, поток пробудится и снова выполнится =lock=.
++ Должен быть хотя бы один поток, сигнализирующий о том, что условие стало истинным. Сигнал может быть послан с помощью =notify_one()=, при этом будет разблокирован один (любой) поток из ожидающих, или =notify_all()=, что разблокирует все ожидающие потоки.
++ В виду некоторых сложностей при создании пробуждающего условия, которое может быть предсказуемых в многопроцессорных системах, могут происходить ложные пробуждения (=spurious wakeup=). Это означает, что поток может быть пробужден, даже если никто не сигнализировал условной переменной. Поэтому необходимо еще проверять, верно ли условие пробуждение уже после то, как поток был пробужден. Т.к. ложные пробуждения могут происходить многократно, такую проверку необходимо организовывать в цикле.
+
+[[./cond_var/main.cpp][Пример]]
+
 ** semaphores
 ** latches and barriers
 =std::latch= — это примитив синхронизации,  который позволяет одному или нескольким потокам ожидать, пока другие потоки не завершат выполнение. В отличие от =std::barrier=, он не перезагружается после достижения условия синхронизации, что делает его полезным для одноразовой координации.
