add semaphors info

--- a/cpp/conc/lesson.org
+++ b/cpp/conc/lesson.org
@@ -148,6 +148,17 @@ future.get();
 [[./cond_var/main.cpp][Пример]]
 
 ** semaphores
+Механизм синхронизации, используемый для управления одновременным доступом к общему ресурсу.
++ =counting_semaphore= - это облегчённый примитив синхронизации, который может контролировать доступ к общему ресурсу. В отличие от =std::mutex=, =counting_semaphore= позволяет одновременно обращаться к одному и тому же ресурсу как минимум =LeastMaxValue= пользователям.
++ =binary_semaphore= - это псевдоним для специализации =std::counting_semaphore= с =LeastMaxValue= в качестве =1=. Реализации могут реализовывать =binary_semaphore= более эффективно, чем реализация =std::counting_semaphore= по умолчанию.
+
+Ниже приведены некоторые основные преимущества использования семафоров по сравнению с аналогичными конструкциями:
++ =Точное управление= - для одновременного доступа к ресурсу можно настроить семафоры так, чтобы они разрешали доступ определённому количеству потоков.
++ =Обобщение= - семафоры более универсальны и могут использоваться для реализации других примитивов синхронизации.
++ =Несколько ресурсов= - счётные семафоры можно использовать для управления несколькими экземплярами ресурса. Это делает их подходящими для сценариев, в которых необходимо контролировать доступ к пулу ресурсов (например, к пулу потоков или пулу соединений).
++ =Блокировка и ожидание= - механизмы блокировки и ожидания в семафорах позволяют потокам ожидать, пока ресурс снова станет доступным.
++ =Тайм-ауты= - при получении семафора можно указать тайм-аут, что делает его более полезным.
+
 ** latches and barriers
 =std::latch= — это примитив синхронизации,  который позволяет одному или нескольким потокам ожидать, пока другие потоки не завершат выполнение. В отличие от =std::barrier=, он не перезагружается после достижения условия синхронизации, что делает его полезным для одноразовой координации.
 =std::latch= полезен в ситуациях, когда необходимо, чтобы один поток ждал завершения других потоков.
