--- a/План.md
+++ b/План.md
@@ -7,17 +7,14 @@
 7. [[Логгирование]]
 8. Докер
 9. Принципы построения [[Микросервисы]]
-10. Флаги тестов, тестовые тэги, фаззинг
-11. Отладка удалённых приложений, трейсинг, джаггер
-12. Шардинг и репликация - механизмы
-13. L3, L7 балансеры, 
-14. кубер, ETCD
-15. Монго
-17. Clusterlabs Pacemaker
-18. Ansible
-19. протоколамы SCSI / NVMe
-20. iSCSI / Fibre Channel
-21. - Иерархия памяти. Фенсинг, барьеры, зачем?
-22. транзакции, уровни изоляции
-23. Кафка
+10. Флаги тестов, тестовые тэги, 
+11. фаззинг
+12. Отладка удалённых приложений, трейсинг, джаггер
+13. Шардинг и репликация - механизмы [[Масштабирование баз данных]]
+14. L3, L7 балансеры, 
+15. кубер
+16. Монго
+17. Иерархия памяти. Фенсинг, барьеры, зачем?
+18. [[Уровни изоляции транзакций в БД]]]
+19. Кафка
 
